--- a/index.html
+++ b/index.html
@@ -53,12 +53,10 @@
               </div>
               <marquee style="color: #fff;" behavior="" direction="">Wellcome to TEKAONE-web ,Official Web Of TKJ Class</marquee>
               
-              <div class="bjudul" data-aos="fade-right"
-              data-aos-offset="300"
-              data-aos-easing="ease-in-sine">>
+              <div class="bjudul" data-aos="fade-right" data-aos-duration="3000">
                 <h1 class="twarna" style=" color: white; margin-bottom: 50px; margin-top: 50px;">TEKAONE OFFICIAL WEB</h1>
               </div>
-              <section data-aos="fade-right" data-aos-duration="2000" class="atsbtnardy">
+              <section data-aos="zoom-in" data-aos-duration="3000"  class="atsbtnardy">
               <section style="border: 6px solid #fff; background-color:#3a3a3a;border-radius: 10px; width: 315px; margin-bottom: 10px; padding: 5px;" class="ardybtn">
                 <div style="margin-left: -10px; margin-right: 10px;"  class="mndriardy">
                   <img class="rounded-circle" style="border: 2px solid #fff; margin-left: 10px;" src="assets/ardy.png" width="65px" height="65px" alt="">
@@ -69,8 +67,8 @@
                 </div>
               </section>
             </section>
-              <section style="margin-bottom: 50px;" data-aos="fade-right" data-aos-duration="2000"  class="earlybtn">
-<div style="color: white; border: 6px solid #fff;background-color: #3a3a3a;border-radius: 10px; padding: 5px; margin-right: 45px; margin-left: 50px; height: 270px; width: 160px;" class="mandiri">
+              <section style="margin-bottom: 50px;"  class="earlybtn">
+<div style="color: white; border: 6px solid #fff;background-color: #3a3a3a;border-radius: 10px; padding: 5px; margin-right: 45px; margin-left: 50px; height: 270px; width: 160px;" class="mandiri"  data-aos="fade-right" data-aos-duration="2000">
   
    <a href="https://www.instagram.com/tkj_yapiaparung/">
 <div style="margin-bottom: 185px;" class="blogo1">
@@ -81,7 +79,7 @@
 INSTAGRAM
 </div>
 <div class="row">
-    <div style="color: #fff; border: 4px solid #fff; background-color: #3a3a3a; border-radius: 10px; width: 125px; height: 130px;" class="bguru">
+    <div style="color: #fff; border: 4px solid #fff; background-color: #3a3a3a; border-radius: 10px; width: 125px; height: 130px;" class="bguru"  data-aos="fade-down" data-aos-duration="1000">
         
         <div class="row">
             <a href="https://www.instagram.com/reffofwz/">
@@ -93,7 +91,7 @@ INSTAGRAM
         </div>
        <p style="margin-bottom: 5px;"> Pak Fawaz</p>
     </div>
-    <div style="color: #fff; border: 4px solid #fff; background-color: #3a3a3a; border-radius: 10px; width: 125px; margin-top: 10px; height: 130px;" class="bmember">
+    <div style="color: #fff; border: 4px solid #fff; background-color: #3a3a3a; border-radius: 10px; width: 125px; margin-top: 10px; height: 130px;" class="bmember"  data-aos="fade-up" data-aos-duration="1000">
         <a href="member.html">
         <div style="height: 95px;" class="blogo3">
             <img style="margin-right: 25px;" src="assets/muridril.png" width="35px" height="35px" alt="">
